add album playlist and audio controller feature

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "folders": ["/Users/weevil/Documents/music_library"],
+    "folders": ["/Users/weevil/Documents/music_library", "/Users/weevil/Documents/[radio]"],
     "url": "http://localhost:8964/"
 }
