--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "jsmediatags": "^3.9.7",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "mongoose": "^6.6.3",
